[project]
name = "first_project"
version = "0.1.0"
description = ""
authors = [
    {name = "youzuoreply",email = "y.zuo@reply.de"}
]
requires-python = ">=3.11, <3.15"
dependencies = [
    "numpy (==2.4.1)",
    "scipy (==1.17.0)",
    "matplotlib (==3.10.8)",
    "opencv-python (==4.13.0.90)",
    "polars (==1.37.1)",
    "requests (==2.32.5)",
    "pyyaml (==6.0.3)",
    "psutil (==7.2.1)",
    "torch (==2.9.1)",
    "torchvision (==0.24.1)",
    "ultralytics (==8.4.7)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
